[gd_scene load_steps=3 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://scenes/player/cam_controller.gd" type="Script" id=2]

[node name="CamController" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65569, -0.341007 )
script = ExtResource( 2 )

[node name="BoomYRot" type="Spatial" parent="."]

[node name="BoomXRot" type="Spatial" parent="BoomYRot"]

[node name="BOOM_CAM_SEP" type="Spatial" parent="BoomYRot/BoomXRot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )

[node name="CameraY_Rotator" type="Spatial" parent="BoomYRot/BoomXRot/BOOM_CAM_SEP"]

[node name="CameraX_Rotator" type="Spatial" parent="BoomYRot/BoomXRot/BOOM_CAM_SEP/CameraY_Rotator"]

[node name="Camera" type="Camera" parent="BoomYRot/BoomXRot/BOOM_CAM_SEP/CameraY_Rotator/CameraX_Rotator"]
environment = ExtResource( 1 )
doppler_tracking = 1
current = true
fov = 94.2

[node name="InteractionRay" type="RayCast" parent="BoomYRot/BoomXRot/BOOM_CAM_SEP/CameraY_Rotator/CameraX_Rotator/Camera"]
transform = Transform( 1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, 0, -5.28405 )
cast_to = Vector3( 0, 0, -3 )
collision_mask = 524288
collide_with_areas = true
